fix: distortion of images in products page

--- a/src/components/molecules/product-grid-card/ProductGridCard.scss
+++ b/src/components/molecules/product-grid-card/ProductGridCard.scss
@@ -14,7 +14,6 @@
 
   & .product-image {
     width: 100%;
-    aspect-ratio: 1 / 1;
   }
 
   & .price-tag {
@@ -24,6 +23,9 @@
 
   & .cart-icon {
     opacity: 0;
+    bottom: 4rem;
+    right: 2rem;
+    position: absolute;
   }
 
   &:hover {
@@ -35,9 +37,6 @@
       opacity: 1;
       cursor: pointer;
       transition: opacity 200ms ease-in;
-      position: absolute;
-      bottom: 8rem;
-      right: 2rem;
     }
   }
 
